<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Openterface</string>
    <string name="action_control">Controls</string>
    <string name="show_options">FUNCTION</string>
    <string name="action_usb">USB</string>
    <string name="action_safely_eject">Safely Eject</string>
    <string name="action_settings">Settings</string>
    <string name="action_video_format">Video Format</string>
    <string name="action_rotate_90_CW">Rotate 90 CW</string>
    <string name="action_rotate_90_CCW">Rotate 90 CCW</string>
    <string name="action_flip_horizontally">Flip Horizontally</string>
    <string name="action_flip_vertically">Flip Vertically</string>
    <string name="saved_preview_size">saved_preview_size</string>
    <string name="main_connect_usb_tip">Connect the USB camera</string>
    <string name="device_list_dialog_title">Device</string>
    <string name="device_list_empty_tip">Please connect a USB Openterface</string>
    <string name="device_list_cancel_button">Cancel</string>
    <string name="video_format_title">Video Format</string>
    <string name="video_format_format">Format</string>
    <string name="video_format_resolution">Resolution</string>
    <string name="video_format_frame_rate">Frame Rate</string>
    <string name="video_format_ok_button">OK</string>
    <string name="video_format_cancel_button">Cancel</string>
    <string name="video_format_format_yuv">YUV</string>
    <string name="video_format_format_mjped">MJPEG</string>
    <string name="camera_controls_text_brightness">Brightness</string>
    <string name="camera_controls_text_contrast">Contrast</string>
    <string name="camera_controls_text_hue">Hue</string>
    <string name="camera_controls_text_auto">Auto</string>
    <string name="camera_controls_text_saturation">Saturation</string>
    <string name="camera_controls_text_sharpness">Sharpness</string>
    <string name="camera_controls_text_gamma">Gamma</string>
    <string name="camera_controls_text_white_balance">White Balance</string>
    <string name="camera_controls_text_backlight_comp">Backlight Comp</string>
    <string name="camera_controls_text_gain">Gain</string>
    <string name="camera_controls_text_exposure_time">ExposureTime</string>
    <string name="camera_controls_text_iris">Iris</string>
    <string name="camera_controls_text_focus">Focus</string>
    <string name="camera_controls_text_zoom">Zoom</string>
    <string name="camera_controls_text_pan">Pan</string>
    <string name="camera_controls_text_tilt">Tilt</string>
    <string name="camera_controls_text_roll">Roll</string>
    <string name="camera_controls_text_disable">Disable</string>
    <string name="camera_controls_text_50hz">50Hz</string>
    <string name="camera_controls_text_60hz">60Hz</string>
    <string name="camera_controls_button_close">Close</string>
    <string name="camera_controls_button_reset">Reset</string>
    <string name="KeyBoard_Ctrl_Add_C">Ctrl+C\nCopy</string>
    <string name="KeyBoard_Ctrl_Add_V">Ctrl+V\nPaste</string>
    <string name="KeyBoard_Ctrl_Add_A">Ctrl+A\nSelect All</string>
    <string name="KeyBoard_Ctrl_Add_X">Ctrl+X\nCut</string>
    <string name="KeyBoard_Ctrl_Add_Z">Ctrl+Z\nRevocation</string>
    <string name="KeyBoard_Ctrl_Add_S">Ctrl+S\nSave</string>
    <string name="KeyBoard_Win_Add_Tab">Win+Tab\nTask View</string>
    <string name="KeyBoard_Win_Add_S">Win+S\nSearch</string>
    <string name="KeyBoard_Win_Add_E">Win+E\nExplorer</string>
    <string name="KeyBoard_Win_Add_R">Win+R\nCommand</string>
    <string name="KeyBoard_Win_Add_D">Win+D\nDesktop</string>
    <string name="KeyBoard_Win_Add_L">Win+L\nLock PC</string>
    <string name="KeyBoard_Alt_Add_F4">Alt+F4\nClose Window</string>
    <string name="KeyBoard_Ctrl_Add_Alt_Add_Del">Ctrl+Alt+Del\nTask Manager</string>
    <string name="KeyBoard_Alt_Add_PrtScr">Alt+PrtScr\nWindow Screenshot</string>
    <string name="setup_button_description">setup_button_description</string>
    <string name="keyBoard_button_description">keyBoard_button_description</string>
    <string name="ShortCut">ShortCut</string>
    <string name="Shift">Shift</string>
    <string name="Ctrl" tools:ignore="MissingTranslation">Ctrl</string>
    <string name="Alt" tools:ignore="MissingTranslation">Alt</string>
    <string name="Win" tools:ignore="MissingTranslation">Win</string>
    <string name="Function">Function</string>
    <string name="Minus_Sign_Button">_\n-</string>
    <string name="Plus_Sign_Button">+\n=</string>
    <string name="Left_Bracket_Button">{\n[</string>
    <string name="Right_Bracket_Button">}\n]</string>
    <string name="Colon_Button">:\n;</string>
    <string name="Quotation_Button">\""\n'</string>
    <string name="Bitwise_OR_Button">|\n\\</string>
    <string name="Less_Sign_Button">&lt;\n,</string>
    <string name="Greater_Sign_Button">&gt;\n.</string>
    <string name="Question_Mark">\?\n/</string>
    <string name="Function1">F1</string>
    <string name="Function2">F2</string>
    <string name="Function3">F3</string>
    <string name="Function4">F4</string>
    <string name="PrtSc">PrtSc</string>
    <string name="ScrLk">ScrLk</string>
    <string name="Pause">Pause</string>
    <string name="Esc">Esc</string>
    <string name="Tilde">~\n`</string>
    <string name="TAB">TAB</string>
    <string name="Function5">F5</string>
    <string name="Function6">F6</string>
    <string name="Function7">F7</string>
    <string name="Function8">F8</string>
    <string name="Ins">Ins</string>
    <string name="Home">Home</string>
    <string name="PgUp">PgUp</string>
    <string name="Function9">F9</string>
    <string name="Function10">F10</string>
    <string name="Function11">F11</string>
    <string name="Function12">F12</string>
    <string name="Delete">DEL</string>
    <string name="End">End</string>
    <string name="PgDn">PgDn</string>
    <string name="Key_Tilde">~\n`</string>
    <string name="One_Sigh_Button">!\n1</string>
    <string name="Two_At_Button">\@\n2</string>
    <string name="Three_Pound_Button">#\n3</string>
    <string name="Four_Dollar_Button">$\n4</string>
    <string name="Five_Percent_Button">%\n5</string>
    <string name="Six_Caret_Button">^\n6</string>
    <string name="Seven_Ampersand_Button">&amp;\n7</string>
    <string name="Eight_Asterisk_Button" tools:ignore="MissingTranslation">*\n8</string>
    <string name="Nine_Left_Parenthesis_Button" tools:ignore="MissingTranslation">(\n9</string>
    <string name="Zero_Right_Parenthesis_Button" tools:ignore="MissingTranslation">)\n0</string>
    <string name="Key_Minus">_\n-</string>
    <string name="Key_Equals">+\n=</string>
    <string name="Key_Backspace" tools:ignore="MissingTranslation">⌫</string>
    <string name="Key_Tab" tools:ignore="MissingTranslation">Tab</string>
    <string name="Q_Button">Q</string>
    <string name="W_Button">W</string>
    <string name="E_Button">E</string>
    <string name="R_Button">R</string>
    <string name="T_Button">T</string>
    <string name="Y_Button">Y</string>
    <string name="U_Button">U</string>
    <string name="I_Button">I</string>
    <string name="O_Button">O</string>
    <string name="P_Button">P</string>
    <string name="Key_LeftBracket">{\n[</string>
    <string name="Key_RightBracket">}\n]</string>
    <string name="Key_Backslash">|\n\\</string>
    <string name="Key_Caps" tools:ignore="MissingTranslation">Caps</string>
    <string name="A_Button">A</string>
    <string name="S_Button">S</string>
    <string name="D_Button">D</string>
    <string name="F_Button">F</string>
    <string name="G_Button">G</string>
    <string name="H_Button">H</string>
    <string name="J_Button">J</string>
    <string name="K_Button">K</string>
    <string name="L_Button">L</string>
    <string name="Key_Semicolon">:\n;</string>
    <string name="Key_Apostrophe">\"\n\'</string>
    <string name="Enter_Button">Enter</string>
    <string name="Key_LeftShift" tools:ignore="MissingTranslation">⇧</string>
    <string name="Z_Button">Z</string>
    <string name="X_Button">X</string>
    <string name="C_Button">C</string>
    <string name="V_Button">V</string>
    <string name="B_Button">B</string>
    <string name="N_Button">N</string>
    <string name="M_Button">M</string>
    <string name="Key_Comma">&lt;\n,</string>
    <string name="Key_Period">&gt;\n.</string>
    <string name="Key_Slash">\?\n/</string>
    <string name="Key_RightShift" tools:ignore="MissingTranslation">⇧</string>
    <string name="Key_Ctrl" tools:ignore="MissingTranslation">Ctrl</string>
    <string name="Key_Win" tools:ignore="MissingTranslation">Win</string>
    <string name="Key_Alt" tools:ignore="MissingTranslation">Alt</string>
    <string name="Key_FN" tools:ignore="MissingTranslation">FN</string>
    <string name="Space_Button" />
    <string name="Key_AltGr" tools:ignore="MissingTranslation">Alt</string>
    <string name="Key_CtrlGr" tools:ignore="MissingTranslation">Ctrl</string>
    <string name="Key_Up" tools:ignore="MissingTranslation">↑</string>
    <string name="Key_Left" tools:ignore="MissingTranslation">←</string>
    <string name="Key_Down" tools:ignore="MissingTranslation">↓</string>
    <string name="Key_Right" tools:ignore="MissingTranslation">→</string>
    <string name="ok_button">OK</string>
    <string name="cancel">Cancel</string>
    <string name="vnc_encoding_label">Encoding:</string>
    <string name="vnc_quality_label">Quality (JPEG):</string>
    <string name="vnc_compress_label">Compression:</string>
    <string name="target_os_windows">Windows (Win key)</string>
    <string name="target_os_macos">macOS (Cmd key)</string>
    <string name="target_os_linux">Linux (Super key)</string>
    <string name="select_theme_color">Select Theme Color</string>
    <string name="display_mode">Display Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="follow_system">Follow System</string>
    <string name="vnc_server">VNC Server</string>
    <string name="status_label">Status: %s</string>
    <string name="status_stopped">Stopped</string>
    <string name="device_ip_label">Device IP:</string>
    <string name="loading">Loading...</string>
    <string name="port_label">Port:</string>
    <string name="password_optional_label">Password (optional):</string>
    <string name="bind_address_label">Bind Address:</string>
    <string name="auto_start_on_usb">Auto-start on USB connect</string>
    <string name="start_server">Start Server</string>
    <string name="stop_server">Stop Server</string>
    <string name="hint_no_password">Leave empty for no password</string>
    <string name="hint_default_bind">0.0.0.0 for all interfaces</string>
    <string name="webrtc_server">WebRTC Server</string>
    <string name="signaling_port_label">Signaling Port:</string>
    <string name="browser_url_label">Browser URL:</string>
    <string name="bitrate_label">Bitrate (kbps):</string>
    <string name="frame_rate_label">Frame Rate (FPS):</string>
    <string name="description_webrtc">Stream video directly to web browsers without installing a client app.</string>
    <string name="description_webrtc_howto">Open the URL in a modern browser. The browser will negotiate a WebRTC connection and show the video stream.</string>
    <string name="serial_debug_title">Openterface Serial Debug</string>
    <string name="hint_enter_data">Enter data to send</string>
    <string name="connect">Connect</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="test_comm">Test Comm</string>
    <string name="clear_log">Clear Log</string>
    <string name="send">Send</string>
    <string name="debug_log_label">Debug Log:</string>
    <string name="status_initializing">Status: Initializing...</string>
    <string name="initializing_debug_session">Initializing debug session...</string>
    <string name="url_placeholder">http://...</string>
</resources>